--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "csv-parse": "^5.5.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "joi": "^17.13.1"
+    "joi": "^17.13.1",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
